<resources>
    <string name="app_name">Placement Cell</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="spsu">Sir Padampat Singhania University</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="FCM_PREF">in.monte.spsu.fcm_pref</string>
    <string name="FCM_TOKEN">in.monte.spsu.fcm_token</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_table">Time Table</string>
    <string name="result">Result</string>
    <string name="notice">Notice</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate App</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="resend">Resend OTP.</string>
    <string name="verify">verify</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="activate">Activate</string>
    <string name="activate_msg">Enter the Activation Code sent to your Email ID.</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="useremail">userinfo@infoemail.com</string>
    <string name="nav_header_desc">User Profile Picture</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="otp">One Time Password</string>
    <string name="username">Username</string>
    <string name="picture">picture</string>
    <string name="name">Name :</string>
    <string name="father_name">Father\'s Name : </string>
    <string name="_10th">10th :</string>
    <string name="_12th">12th :</string>
    <string name="cgpa">CGPA :</string>
    <string name="course">Course :</string>
    <string name="semester">Semester :</string>
    <string name="interest">Interest :</string>
    <string name="skills">Skills :</string>
    <string name="project">Projects :</string>
    <string name="certification">Certification :</string>
    <string name="training">Training :</string>
    <string name="description">Description :</string>
    <string name="requirement">Requirement :</string>
    <string name="last_date">Last Date :</string>
    <string name="openings">Openings :</string>
    <string name="status">Status</string>
    <string name="technical">Technical</string>
    <string name="non_tech">Non-technical</string>
    <string name="both">Both</string>
    <string name="save">Save</string>
    <string name="name2">Name</string>
    <string name="father_name2">Father\'s Name</string>
    <string name="_10th2">10th</string>
    <string name="_12th2">12th</string>
    <string name="cgpa2">CGPA</string>
    <string name="course2">Course</string>
    <string name="semester2">Semester</string>
    <string name="interest2">Interest</string>
    <string name="skills2">Skills</string>
    <string name="project2">Projects</string>
    <string name="certification2">Certification</string>
    <string name="training2">Training</string>
    <string name="description2">Description</string>
    <string name="requirement2">Requirement</string>
    <string name="last_date2">Last Date</string>
    <string name="openings2">Openings</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="reqm">Requirement</string>
    <string name="opening">Openings</string>
    <string name="submit">Submit</string>
    <string name="company_name">Company Name</string>
    <string name="date">Date</string>
    <string name="contact">Contact</string>
    <string name="admin">Placement Admin</string>
    <string name="select_date">Select Date</string>
    <string name="no_jobs">No Jobs Posted yet !!</string>
    <string name="create_your_profile">Create Your Profile !!</string>
    <string name="not">NOT</string>
    <string name="load">Loading…</string>
    <string name="something">Something went wrong !!</string>
    <string name="wait">Please wait…</string>
    <string name="enter_all">Please enter all details !!</string>
    <string name="success">SUCCESS</string>
    <string name="prof_created">Profile Created Successfully !!</string>
    <string name="prof_updated">Profile Updated Successfully !!</string>
    <string name="try_again">Failed, try again !!</string>
    <string name="updated">UPDATED</string>
    <string name="no_internet">No Internet !!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="press_again">Press back again to exit !!</string>
    <string name="reg_cmp">Registration Complete !!</string>
    <string name="reg_fail">Registration Failed !!</string>
    <string name="enter_date">Select the correct date !!</string>
    <string name="job_crtd">Job Profile Created Successfully !!</string>
    <string name="job_fld">Job Profile Creation Failed !!</string>
    <string name="wrong">WRONG</string>
    <string name="active">ACTIVE</string>
    <string name="student">STUDENT</string>
    <string name="company">COMPANY</string>
    <string name="adm">ADMIN</string>
    <string name="log_fld">Login Failed !!</string>
    <string name="user_not">User not found !!</string>
    <string name="wrong_pass">Incorrect Password !!</string>
    <string name="activate_acc">Activate Your Account !!</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="applied">APPLIED</string>
    <string name="developer">Developer: Monu Lakshkar &amp; Ashwani Lakshkar</string>
    <string name="create">Create</string>
    <string name="not_found">Not Found !!</string>
    <string name="do_create">Do you want to create your profile ?</string>
    <string name="you_haven_t_applied_yet">You haven\'t applied yet !!</string>
    <string name="pending">Pending</string>
    <string name="selected">Selected</string>
    <string name="rejected">Rejected</string>
    <string name="application">You application has been sent !!</string>
    <string name="already">Already applied for this job !!</string>
    <string name="delete">Delete</string>
    <string name="removed"> has been removed !!</string>
    <string name="dele">Deleting…</string>
    <string name="select">Select</string>
    <string name="reject">Reject</string>
    <string name="no_application_recieved_yet">No application recieved yet !!</string>
    <string name="is_short"> is Shortlisted.</string>
    <string name="is_alre"> is Already Shortlisted.</string>
    <string name="is_rej"> is Rejected.</string>
    <string name="is_arej"> is Already Rejected.</string>
    <string name="enter_otp">Enter OTP !!</string>
    <string name="verifying">Verifying…</string>
    <string name="in_otp">Incorrect OTP !!</string>
    <string name="_resend">Resend ?</string>
    <string name="fld_otp">Failed to send OTP !!</string>
    <string name="_00_30">00:30</string>
    <string name="enter_email">Enter Email address !!</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="manage_student">Manage Students</string>
    <string name="students_not_found">Students not found.</string>
    <string name="s_active">Active</string>
    <string name="deactive">Inactive</string>
    <string name="manage_recruiters">Manage Recruiters</string>
    <string name="recruiters_not_found">Recruiters not found.</string>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="do_log">Do you want to logout ?</string>
    <string name="search_str">Search</string>
</resources>
