<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_manage"
                android:orderInCategory="100"
                android:title="@string/manage_student"
                app:showAsAction="never"/>
            <item android:id="@+id/action_manage_2"
                android:orderInCategory="100"
                android:title="@string/manage_recruiters"
                app:showAsAction="never"/>
            <item android:id="@+id/action_password"
                android:orderInCategory="100"
                android:title="@string/change_password"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
