<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddJob"
    android:background="@drawable/curv"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingBottom="70dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/spsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="13dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:outlineSpotShadowColor="@color/colorAccent"
                android:shadowColor="@color/colorPrimary"
                android:text="@string/spsu"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:transitionName="spsu" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                app:errorEnabled="true"
                android:gravity="center"
                android:textColorHint="@color/greyDark">

                <android.support.design.widget.TextInputEditText
                    android:background="@drawable/edit_text"
                    android:id="@+id/jobTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:focusedByDefault="false"
                    android:hint="@string/title"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/jobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                app:errorEnabled="true"
                android:gravity="center"
                android:textColorHint="@color/greyDark">

                <android.support.design.widget.TextInputEditText
                    android:background="@drawable/edit_text"
                    android:id="@+id/jobDescription1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:focusedByDefault="false"
                    android:hint="@string/desc"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:maxLines="15"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/jobRequirment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                app:errorEnabled="true"
                android:gravity="center"
                android:textColorHint="@color/greyDark">

                <android.support.design.widget.TextInputEditText
                    android:background="@drawable/edit_text"
                    android:id="@+id/jobRequirment1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:focusedByDefault="false"
                    android:hint="@string/reqm"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:maxLines="15"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/jobOpening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                app:errorEnabled="true"
                android:gravity="center"
                android:textColorHint="@color/greyDark">

                <android.support.design.widget.TextInputEditText
                    android:background="@drawable/edit_text"
                    android:id="@+id/jobOpening1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:focusedByDefault="false"
                    android:hint="@string/opening"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/datepickerJob"
                android:background="@drawable/edit_text"
                android:layout_width="wrap_content"
                android:ems="14"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textColor="@color/greyDark"
                android:textSize="18dp"
                android:padding="12dp"/>

            <Button
                android:id="@+id/addJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:elevation="5dp"
                android:text="@string/submit" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>